--- a/app/javascript/packs/schedule.js.erb
+++ b/app/javascript/packs/schedule.js.erb
@@ -2,7 +2,7 @@
 var inputs, schedule_table_and_links, params, term_field, year, period
 
 //% <% if ENV['GH-PAGES'] %>
-var host = 'https://ucalendar.herokuapp.com'
+var host = 'https://ucalendar.osuc.dev'
 //% <% else %>
 var host = window.location.origin
 //% <% end %>
